--- a/login/static/css/estilo_home_servicio.css
+++ b/login/static/css/estilo_home_servicio.css
@@ -648,6 +648,6 @@ header.sticky{
 
 @font-face {
     font-family: 'tommy';
-    src: url(../font/MADE\ TOMMY\ Medium_PERSONAL\ USE.otf);
+    src: url(../font/MADE_TOMMY_Medium_PERSONAL_USE.otf);
 }
 
