--- a/nevera/static/css/style_cambi_tempe.css
+++ b/nevera/static/css/style_cambi_tempe.css
@@ -634,7 +634,7 @@ section.\32 cajas {
 
 @font-face {
   font-family: 'tommy';
-  src: url(../font/MADE\ TOMMY\ Regular_PERSONAL\ USE.otf);
+  src: url(../font/MADE_TOMMY_Regular_PERSONAL_USE.otf);
 }
 
 /*estilo especial para temperatura de neveras */
