--- a/sistema_home/static/css/estilo_reporte.css
+++ b/sistema_home/static/css/estilo_reporte.css
@@ -314,7 +314,7 @@ form{
 
 @font-face {
   font-family: 'tommy';
-  src: url(../font/MADE\ TOMMY\ Regular_PERSONAL\ USE.otf);
+  src: url(../font/MADE_TOMMY_Regular_PERSONAL_USE.otf);
 }
 
 
