--- a/historial/static/css/estilo_historial.css
+++ b/historial/static/css/estilo_historial.css
@@ -446,7 +446,7 @@ form{
   
   @font-face {
     font-family: 'tommy';
-    src: url(../font/MADE\ TOMMY\ Regular_PERSONAL\ USE.otf);
+    src: url(../font/MADE_TOMMY_Regular_PERSONAL_USE.otf);
   }
 
   @font-face {
