--- a/parametros/static/css/estilo_home_parametros.css
+++ b/parametros/static/css/estilo_home_parametros.css
@@ -350,7 +350,7 @@ a {
     
     @font-face {
       font-family: 'tommy';
-      src: url(../font/MADE\ TOMMY\ Regular_PERSONAL\ USE.otf);
+      src: url(../font/MADE_TOMMY_Regular_PERSONAL_USE.otf);
     }
 
     @font-face {
