--- a/parametros/static/css/estilo_parametros.css
+++ b/parametros/static/css/estilo_parametros.css
@@ -423,7 +423,7 @@ form{
 
 @font-face {
   font-family: 'tommy';
-  src: url(../font/MADE\ TOMMY\ Regular_PERSONAL\ USE.otf);
+  src: url(../font/MADE_TOMMY_Regular_PERSONAL_USE.otf);
 }
 
 @font-face {
