--- a/sistema_home/static/css/style_home_system.css
+++ b/sistema_home/static/css/style_home_system.css
@@ -362,5 +362,5 @@ body{
 
 @font-face {
   font-family: 'tommy';
-  src: url(../font/MADE\ TOMMY\ Regular_PERSONAL\ USE.otf);
+  src: url(../font/MADE_TOMMY_Regular_PERSONAL_USE.otf);
 }
